nullaway_error_c587bcaf-e92a-407d-bb18-4b262baf0fba.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/RemoteRegionRegistry.java:489: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return applications.get();
        ^
